# FURYOKU

./: README.md  pyproject.toml
docs/: approval-resume-contract.md  durable-approval-resume-ledger-boundary.md  hermes-furyoku-migration.md  hermes-launch-bridge.md  openclaw-carryover-inventory.md  operator-resume-workflow-contract.md  operator-reviewed-workflow-envelope.md  routing-evidence-contract.md
examples/: character_array.dual-symbiote.json  character_profile.kira-array.json  character_profile.tertiary-symbiote.json  comparison_prompt_map.primary-routing.json  decision_outcomes.example.jsonl  decision_suite.primary-routing.json  feedback_policy.example.json  hermes_approval_resume_contract.example.json  hermes_approval_resume_gate.approved.json  hermes_approval_resume_seven_smoke.approved.json  hermes_approval_resume_three_smoke.approved.json  hermes_bridge_echo_runtime.py  hermes_bridge_hermes_runtime.py  hermes_bridge_one_symbiote.example.json  hermes_bridge_seven_symbiote.example.json  hermes_bridge_three_symbiote.example.json  model_registry.example.json  operator_resume_loop_store.example.json  operator_resume_workflow.example.json  operator_reviewed_hermes_workflow.example.json  routing_score_policy.speed-first.json  task_profile.private-chat.json  task_profile.tradeoff-speed-chat.json
furyoku/: __init__.py  approval_resume.py  character_arrays.py  character_profiles.py  cli.py  hermes_bridge.py  model_decisions.py  model_registry.py  model_router.py  outcome_feedback.py  provider_adapters.py  provider_health.py  routing_evidence.py  runtime.py  (+3 more)
(+91 files in other folders)
