[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "furyoku"
version = "0.1.0"
description = "FURYOKU multi-model routing primitives and CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
furyoku = "furyoku.cli:main"

[tool.setuptools]
packages = ["furyoku"]

